--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <link rel="icon" type="image/png" href="/eye_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fragile News Source - AI-Powered Media Analysis</title>
-    <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* For Webkit-based browsers (Chrome, Safari) */
       .no-scrollbar::-webkit-scrollbar {
@@ -22,6 +21,6 @@
 </head>
   <body class="bg-black text-green-400 matrix-font">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
